--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+.form {
+  background: #fafafa;
+  padding: 10px;
+  margin: 20px;
+  border: solid 1px #eee;
+}
