--- a/src/styles/graph-editor.css
+++ b/src/styles/graph-editor.css
@@ -14,8 +14,8 @@
 
 .graph-editor .node circle {
     cursor: pointer;
-    fill: #ebebeb;
     stroke-width: 5px;
+    transition: fill 0.2s;
 }
 
 .graph-editor .node text {
@@ -34,6 +34,7 @@
 .graph-editor .edge text {
     cursor: pointer;
     text-transform: capitalize;
+    transform: translate(5px, 8px);
 }
 
 .graph-editor .edge text.dragging {
