Graph ui changes

--- a/src/styles/fabric-overwrite.css
+++ b/src/styles/fabric-overwrite.css
@@ -4,8 +4,5 @@
 
 #context-menu .ms-Nav-groupContent {
     margin-bottom: 0;
-}
-
-#context-menu .ms-Icon-placeHolder {
-    width: 0;
+    animation-name: none;
 }
