--- a/src/styles/context-menu.css
+++ b/src/styles/context-menu.css
@@ -4,4 +4,6 @@
     position: fixed;
     box-shadow: 1px 3px 3px rgba(0,0,0,0.3);
     background: #fff;
+    border-radius: 3px;
+    overflow: hidden;
 }
