--- a/src/styles/graph-editor.css
+++ b/src/styles/graph-editor.css
@@ -1,11 +1,16 @@
 
+.graph-ui {
+    width: 100%;
+    height: 100%;
+}
+
 .graph-editor {
     user-select: none;
     background: #ebebeb;
 }
 
 .graph-editor .node circle {
-    transition: transform 1s;
+    transition: transform 0.2s;
 }
 
 .graph-editor .node.dragging circle {
@@ -15,7 +20,7 @@
 .graph-editor .node circle {
     cursor: pointer;
     stroke-width: 5px;
-    transition: fill 0.2s;
+    transition: all 0.2s;
 }
 
 .graph-editor .node text {
