--- a/src/styles/graph-editor.css
+++ b/src/styles/graph-editor.css
@@ -2,6 +2,7 @@
 .graph-ui {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .graph-editor {
@@ -10,7 +11,7 @@
 }
 
 .graph-editor .node circle {
-    transition: transform 0.2s;
+    transition: transform 1s;
 }
 
 .graph-editor .node.dragging circle {
