--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,20 @@ body .app {
   bottom: 0;
   left: 0;
   right: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+body .app .left {
+  flex: 1;
+  position: relative;
+}
+
+body .app .right {
+  width: 340px;
+  border-left: solid 1px #cdcdcd;
+  box-shadow: inset 10px 0 20px rgba(0, 0, 0, 0.02), inset 1px 0 15px rgba(0, 0, 0, 0.05);
+  background: #dedede;
 }
 
 .form {
