Ui interaction changes

--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,9 @@ body .app .right {
   background: #dedede;
   position: relative;
 }
+
+.select-hint {
+  padding: 10px 15px;
+  opacity: 0.4;
+  user-select: none;
+}
