Move the create prop changes to edges

--- a/src/styles/edit-entity.css
+++ b/src/styles/edit-entity.css
@@ -44,6 +44,8 @@
     top: 10px;
     border-radius: 3px;
     overflow: hidden;
+    background: #eee;
+    cursor: not-allowed;
 }
 
 .edit-entity .entity-name .color-selector input {
