Adding more system props

--- a/src/styles/edit-entity.css
+++ b/src/styles/edit-entity.css
@@ -108,7 +108,7 @@
     transition: background 0.2s;
 }
 
-.edit-entity ul.properties-list > li:not[disabled] .property-list-name:hover {
+.edit-entity ul.properties-list > li:not([disabled]) .property-list-name:hover {
     background: #fafafa;
 }
 
