--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,12 @@ label,
   font-size: 12px !important;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 input {
   padding-left: 10px !important;
   padding-right: 10px !important;
