--- a/src/styles/fabric-overwrite.css
+++ b/src/styles/fabric-overwrite.css
@@ -6,3 +6,9 @@
     margin-bottom: 0;
     animation-name: none;
 }
+
+.ms-Checkbox-checkbox {
+    width: 16px !important;
+    height: 16px !important;
+    margin-right: 0 !important;
+}
