--- a/src/Components/tmpQueryMaker/styles.css
+++ b/src/Components/tmpQueryMaker/styles.css
@@ -7,7 +7,6 @@ maker {
     
     border-radius: 3px;
     background: #fff;
-    user-select: none;
 }
 
 maker,
@@ -23,18 +22,8 @@ line {
     display: block;
     padding: 0 4px;
     line-height: 20px;
-    cursor: pointer;
     opacity: 0.4;
-}
-
-line:hover {
-    background: #fafafa;
-    opacity: 0.5;
-}
-
-line:hover comment {
-    display: inline-block;
-    opacity: 0.75;
+    transition: opacity 0.2s;
 }
 
 line[data-selected="true"] {
@@ -46,8 +35,7 @@ line input {
 }
 
 comment {
-    transition: opacity 0.2s;
-    opacity: 0.2;
+    opacity: 0.7;
 }
 
 /*
@@ -145,7 +133,11 @@ boolean {
     padding: 2px 0 !important;
 }
 
-ocb, ccb, ob, cb, colon {
+ocb,
+ccb,
+ob,
+cb,
+colon {
     display: inline-block;
 }
 
