Little changes, no space for node and prop names, ul selected prop css width

--- a/src/styles/edit-entity.css
+++ b/src/styles/edit-entity.css
@@ -106,6 +106,12 @@
     background: #fafafa;
 }
 
+.edit-entity .properties-list .ms-TextField,
+.edit-entity .properties-list .ms-Toggle,
+.edit-entity .properties-list .ms-Dropdown-container {
+    flex: 1;
+}
+
 .edit-entity .property-list-name {
     position: relative;
     padding-left: 10px;
