--- a/src/Components/CodeGenerator/styles.css
+++ b/src/Components/CodeGenerator/styles.css
@@ -3,8 +3,8 @@
     position: fixed;
     top: 10px;
     bottom: 10px;
-    right: 10px;
-    left: 10px;
+    right: 300px;
+    left: 50%;
     background: #fff;
     padding: 20px 20px 20px 0;
     z-index: 1000;
