--- a/src/Components/CodeGenerator/styles.css
+++ b/src/Components/CodeGenerator/styles.css
@@ -95,3 +95,14 @@
 .cm-atom {
     color: #CA9800
 }
+
+/* */
+
+.code-generation-error {
+    background: #B11A04;
+    padding: 10px 15px;
+    margin-left: 30px;
+    color: #fff;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
